--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" aria-current="page" href="usabilidad.html">Usabilidad Web</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Accesibilidad Web</a>
+                    <a class="nav-link" href="accesibilidad.html">Accesibilidad Web</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" aria-current="page" href="#">Diseño web centrado en el usuario</a>
@@ -68,7 +68,7 @@
                                     <h5 class="card-title">Accesibilidad Web</h5>
                                     <p class="card-text">Investigación 2 ¿Qué es?, Importancia, Principios, Ejemplos.
                                         </p>
-                                    <a href="#" class="custom-btn">Ver investigación</a>
+                                    <a href="accesibilidad.html" class="custom-btn">Ver investigación</a>
                                 </div>
                             </div>
                         </div>
