--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="accesibilidad.html">Accesibilidad Web</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#">Diseño web centrado en el usuario</a>
+                    <a class="nav-link" aria-current="page" href="DCU.html">Diseño web centrado en el usuario</a>
                   </li>
                 </ul>
               </div>
@@ -81,7 +81,7 @@
                                     <h5 class="card-title">Diseño web centrado en el usuario</h5>
                                     <p class="card-text">Investigación 3 ¿Qué es DCU?, Etapas, Beneficios del DCU, Ejemplo o casos.
                                         </p>
-                                    <a href="#" class="custom-btn">Ver investigación</a>
+                                    <a href="DCU.html" class="custom-btn">Ver investigación</a>
                                 </div>
                             </div>
                         </div>
